--- a/resources/admin/src/assets/styles/pages/_page.scss
+++ b/resources/admin/src/assets/styles/pages/_page.scss
@@ -3,6 +3,16 @@
 
 .c-section {
   outline: none;
+
+  &__title {
+    font-size: variables.$fs-30;
+    color: variables.$white-color;
+    font-weight: variables.$font-bold;
+  }
+
+  .c-card-image {
+    height: 200px;
+  }
 }
 
 @include core.media-breakpoint-up(lg) {
