--- a/resources/admin/src/assets/styles/imports/base.scss
+++ b/resources/admin/src/assets/styles/imports/base.scss
@@ -1,5 +1,5 @@
-@import '../base/base';
-@import '../base/helpers';
-@import '../base/settings';
-@import '../base/reset';
-@import '../base/typo';
+@use '../base/base';
+@use '../base/helpers';
+@use '../base/settings';
+@use '../base/reset';
+@use '../base/typo';
