--- a/resources/admin/src/assets/styles/main.scss
+++ b/resources/admin/src/assets/styles/main.scss
@@ -1,4 +1,4 @@
-@import 'imports/modules';
-@import 'imports/base';
-@import 'imports/components';
-@import 'imports/pages';
+@use 'imports/modules';
+@use 'imports/base';
+@use 'imports/components';
+@use 'imports/pages';
