chore: refactor app folder (split in api, fields, helpers, etc.)
- Delete deprecated files
- Create a nice bootstrap starter
- Autoload app classes

--- a/resources/vue/src/assets/styles/base/_base.scss
+++ b/resources/vue/src/assets/styles/base/_base.scss
@@ -28,7 +28,7 @@ a {
 h1,
 h2,
 h3 {
-  color: variables.$black-color;
+  color: variables.$white-color;
   font-family: variables.$secondary-font-family !important;
   margin: 0;
 }
