--- a/resources/admin/src/assets/styles/base/_base.scss
+++ b/resources/admin/src/assets/styles/base/_base.scss
@@ -1,65 +1,65 @@
 @use 'variables';
 @use 'mixins';
 
-body {
-  background-color: variables.$white-color;
+::selection {
+  color: variables.$white-color;
+  background: variables.$primary-color;
 }
 
-.c-app {
-  ::selection {
-    color: variables.$white-color;
-    background: variables.$primary-color;
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  width: 100%;
+  overflow-x: hidden;
+  color: variables.$black-color !important;
+  background-color: variables.$white-color;
+
+  p {
+    line-height: 26px;
+  }
+}
+
+a {
+  color: variables.$primary-color;
+}
+
+h1,
+h2,
+h3 {
+  color: variables.$black-color;
+  font-family: variables.$secondary-font-family !important;
+  margin: 0;
+}
+
+* {
+  &::-webkit-scrollbar {
+    width: 10px;
   }
 
-  html {
-    scroll-behavior: smooth;
+  &::-webkit-scrollbar-track {
+    background: transparent;
+    border-radius: 0;
   }
 
-  body {
-    width: 100%;
-    overflow-x: hidden;
-    color: variables.$black-color !important;
+  &::-webkit-scrollbar-thumb {
+    background: variables.$gray-color-400;
+    border-radius: 10px;
 
-    p {
-      line-height: 26px;
+    &:hover {
+      background: variables.$black-color;
+    }
+
+    &:active {
+      background: variables.$primary-color;
     }
   }
+}
 
-  a {
-    color: variables.$primary-color;
-  }
-
-  h1,
-  h2,
-  h3 {
-    color: variables.$black-color;
-    font-family: variables.$secondary-font-family !important;
-    margin: 0;
-  }
-
+[data-pc-name], /* PrimeVue rule */
+.c-app {
   * {
     font-family: variables.$body-font-family !important;
-
-    &::-webkit-scrollbar {
-      width: 10px;
-    }
-
-    &::-webkit-scrollbar-track {
-      background: transparent;
-      border-radius: 0;
-    }
-
-    &::-webkit-scrollbar-thumb {
-      background: variables.$gray-color-400;
-      border-radius: 10px;
-
-      &:hover {
-        background: variables.$black-color;
-      }
-
-      &:active {
-        background: variables.$primary-color;
-      }
-    }
   }
 }
