--- a/resources/vue/src/assets/styles/base/_base.scss
+++ b/resources/vue/src/assets/styles/base/_base.scss
@@ -6,10 +6,6 @@
   background: variables.$primary-color;
 }
 
-html {
-  scroll-behavior: smooth;
-}
-
 body {
   width: 100%;
   overflow-x: hidden;
@@ -19,6 +15,10 @@ body {
   p {
     line-height: 26px;
   }
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 a {
@@ -34,8 +34,6 @@ h3 {
 }
 
 * {
-  font-family: variables.$body-font-family !important;
-
   &::-webkit-scrollbar {
     width: 10px;
   }
@@ -99,5 +97,12 @@ h3 {
   &:has(.loaded) {
     overflow: auto;
     height: auto;
+  }
+}
+
+[data-pc-name], /* PrimeVue rule */
+.c-app {
+  * {
+    font-family: variables.$body-font-family !important;
   }
 }
